written test cases for project controller